variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: value stepAmount
stepAmount = 0
^Variables:4: error: not found: value stepAmount
  stepAmount = stepAmout+1
  ^Variables:6: error: not found: value stepAmount
while(stepAmount!= 0){
      ^Variables:7: error: not found: value baward
  baward()
  ^Variables:8: error: not found: value stepAmount
  stepAmount = stepAmount-1
  ^